--- a/Computers.html
+++ b/Computers.html
@@ -316,10 +316,10 @@
 </head>
 
 <body>
-    <div class="container-fliud background">
+    <div class="container-fliud background" id="top">
         <nav class="navbar navbar-expand-md sticky-top">
             <div class="container-xxl">
-                <a href="index.html" id="top" class="nav-brand nav-logo">
+                <a href="index.html" class="nav-brand nav-logo">
                     <span class="text-light"><span style="color:orange;">Amy</span>Accessory</span>
                 </a>
 
@@ -396,57 +396,57 @@
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container ">
                                             <a href="/each-products/Apple iPad Pro.html"> <img src="image/tablet-1.jpg"
-                                                    class="img-item" alt=""></a>
+                                                    class="img-item" alt="Apple iPad Pro and Keyboard"></a>
                                             <h2 class="text-light"> Apple iPad Pro and Keyboard</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                            <span><strike>$310</strike><span>-$300</span></span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
                                             <a href="/each-products/desktop-monitor.html"> <img
-                                                    src="image/desktop monitor.webp" class="img-item" alt=""></a>
-                                            <h2 class="text-light">Desktop monitor</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                                    src="image/desktop monitor.webp" class="img-item" alt="Desktop Monitor"></a>
+                                            <h2 class="text-light">Desktop Monitor</h2>
+                                            <span>$280</span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
                                             <a href="/each-products/MacBook Pro.html"><img
-                                                    src="image/laptop (1).jpeg" class="img-item" alt=""></a>
+                                                    src="image/laptop (1).jpeg" class="img-item" alt="MacBook Pro"></a>
                                             <h2 class="text-light"> MacBook Pro</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                            <span>$350</span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
                                             <a href="/each-products/Apple M4 Pro.HTML"> <img src="image/laptop-avi (4).jpg"
-                                                    class="img-item" alt=""></a>
+                                                    class="img-item" alt="Apple M4 Pro"></a>
                                             <h2 class="text-light">Apple M4 Pro</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                            <span>$330</span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
                                             <a href="/each-products/Microsoft  Laptop.html"> <img src="image/laptops- (5).jpg"
-                                                    class="img-item" alt=""></a>
+                                                    class="img-item" alt="Microsoft Surface Laptop 3"></a>
                                             <h2 class="text-light"> Microsoft Surface Laptop 3</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                            <span><strike>$290</strike><span>-$270</span></span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
                                             <a href="/each-products/MacIntel-Core-i5.html"> <img src="image/laptops- (6).jpg"
-                                                    class="img-item" alt=""></a>
-                                            <h2 class="text-light">Apple MacBook Air 13 Intel Core i5</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                                    class="img-item" alt="MacBook Air 13 Intel Core i5"></a>
+                                            <h2 class="text-light"> MacBook Air 13 Intel Core i5</h2>
+                                            <span><strike>$390</strike><span>-$360</span></span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
                                             <a href="/each-products/SAMSUNG-Book3-Pro .html"> <img src="image/laptops- (8).jpg"
-                                                    class="img-item" alt=""></a>
+                                                    class="img-item" alt="SAMSUNG Galaxy Book3 Pro"></a>
                                             <h2 class="text-light">SAMSUNG Galaxy Book3 Pro </h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                            <span>$300</span>
                                         </div>
                                     </div>
                                 </div>
@@ -474,8 +474,6 @@
                                 <li class="footer-list"><a href="#top" class="footer-link">Computers</a></li>
                                 <li class="footer-list"><a href="Accessories.html" class="footer-link">Accessories</a>
                                 </li>
-                                <li class="footer-list"><a href="Appliances.html" class="footer-link">Appliances</a>
-                                </li>
                                 <li class="footer-list"><a href="contact.html" class="footer-link">Contact</a></li>
                             </ul>
                         </div>
@@ -486,7 +484,7 @@
                                     Niger</li>
                                 <li class="footer-list">State: Niger State</li>
                                 <li class="footer-list">Email: amyogechi@gmail.com</li>
-                                <li class="footer-list">Phone: 234-812-099-1981</li>
+                                <li class="footer-list">Phone: +234-812-099-1981</li>
 
                             </ul>
                         </div>
@@ -506,13 +504,7 @@
         </footer>
     </div>
 
-    <script>
-        let login = document.getElementById('login');
-        let user = document.getElementById('user')
-        user.addEventListener('click', () => {
-            login.classList.toggle('link')
-        })
-    </script>
+    <script src="/index.js"></script>
 </body>
 
 </html>
