--- a/each-products/Amazon Echo Dot.html
+++ b/each-products/Amazon Echo Dot.html
@@ -66,26 +66,31 @@
         <main>
             <div class="container-fliud redmi-container">
                 <hr class="mx-5 text-light my-3">
-               <h4 class="mt-5 mb-5 text-light ms-5 label">USB Wired Computer Mouse Mice</h4>
+               <h4 class="mt-5 mb-5 text-light ms-5 label">Amazon Echo Dot (5th generation) with a clock</h4>
                <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12 col-12 product-content redmi-content">
-                        <img src="/image/black mouse.jpg" class="img-item" alt="USB Wired Computer Mouse Mice">
+                        <img src="/image/jambx.jpg" class="img-item" alt="Amazon Echo Dot">
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-12 content redmi-content">
                         <p>
-                            Brand: Suproot. <br>
-                            Model Name: Various (generic USB wired mouse) <br>
-                            Connectivity: USB wired connection <br>
-                            Tracking Method: Optical or laser sensor <br>
-                            DPI/Resolution: Typically 800-3200 DPI (may be adjustable in some models) <br>
-                            Buttons: 2 buttons plus scroll wheel (gaming mice may have more) <br>
-                            Polling Rate: Typically 125Hz-1000Hz <br>
-                            Cable Length: Usually 1.5-2 meters
-                            Compatibility: Windows, macOS, Linux (universal USB compatibility) <br>
-                            Additional Features: May include programmable buttons, RGB lighting (in gaming models), silent clicking. <br>
+                            Brand: Amazon
+                            Model Name: Echo Dot with clock (5th generation) <br>
+                            Operating System: Amazon's voice assistant platform (Alexa) <br>
+                            Processor: MediaTek MT8695 (4th gen) / AZ1 Neural Edge processor (5th gen) <br>
+                            Memory: Not publicly specified by Amazon <br>
+                            Storage: Not publicly specified by Amazon (used for voice processing) <br>
+                            Display: LED display (shows time, temperature, timers, or other information) <br>
+                            Connectivity:
+                            Dual-band Wi-Fi (802.11a/b/g/n/ac), 
+                            Bluetooth, 
+                            Matter support (5th gen) <br>
+                            Audio: 1.6" front-firing speaker <br>
+                            Controls: Physical buttons for volume, action, and microphone off <br>
+                            Dimensions: Approximately 3.9" x 3.9" x 3.5" (varies slightly between generations) <br>
+                            Power: 15W power adapter (included) <br>
                         <!-- PRICE -->
-                        <span>(-13%) <span class="price">$13</span></span>
+                        <span>(-13%) <span class="price">$108</span></span>
                         <p style="font-size:16px;">shipping fee $10</p>
 
                         <!-- CART BUTTONS -->
