--- a/each-products/Oppo Reno 10 Pro+.html
+++ b/each-products/Oppo Reno 10 Pro+.html
@@ -15,7 +15,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Monomakh&family=Roboto+Slab:wght@100..900&display=swap"
         rel="stylesheet">
-   <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/index.css">
 </head>
 
 <body>
@@ -82,22 +82,19 @@
                         <div class="col-lg-6 col-md-6 col-sm-12 col-12 content redmi-content">
                             <p>
                                 <!-- DESCRIPTIONS -->
+                                Operating System: ColorOS 13.1 (based on Android 13) <br>
+                                RAM: 12GB/16GB variants <br>
                                 Brand: OPPO <br>
-                                Operating System: ColorOS (based on Android) <br>
-                                RAM Memory Installed Size: <br>
-                                - 12GB/16GB LPDDR5X RAM <br>
-                                - Extended RAM capability <br>
-                                CPU Model: Qualcomm Snapdragon 8 Gen 3 <br>
-                                CPU Speed: Up to 3.3 GHz <br>
-                                Memory Storage Capacity:
-                                - 256GB/512GB UFS 4.0 storage <br>
-                                Screen Size: 6.82 inches <br>
-                                Resolution: QHD+ (3168 x 1440 pixels) <br>
-                                Refresh Rate: 120Hz LTPO <br>
-                                Model Name: Find X7 Ultra.
+                                CPU Model: Qualcomm Snapdragon 8+ Gen 1 <br>
+                                CPU Speed: Up to 3.2 GHz <br>
+                                Storage: 256GB/512GB variants <br>
+                                Screen Size: 6.74 inches <br>
+                                Resolution: 1240 x 2772 pixels <br>
+                                Refresh Rate: 120Hz <br>
+                                Model Name: OPPO Reno 10 Pro+ <br>
                             </p>
                             <!-- PRICE -->
-                            <span>(-13%) <span class="price">$00000</span></span>
+                            <span>(-13%) <span class="price">$120</span></span>
                             <p style="font-size:16px;">shipping fee $10</p>
 
                             <!-- CART BUTTONS -->
@@ -107,7 +104,6 @@
                                         href="/sign-up.html">Cart</a></button><br>
                                 <button id="button" class="btn btn-sm btn-light">Quantity</button>
                                 <button id="button1" class="btn btn-sm btn-light">Add</button>
-                                <button id="button2" class="btn btn-sm btn-light">+1</button>
                                 <button id="button3" class="btn btn-sm btn-light">Reset Cart</button>
                             </div>
                         </div>
@@ -122,7 +118,9 @@
                         <div class="col-12 col-lg-5 col-md-5 footer-container">
                             <h3 class=" text-capitalize  footer-header">Amy Electronics Accessories</h3>
                             <p class="footer-paraghap-list footer-list2">Welcome to Amy Accessories, your trusted
-                                destination for high quality electronic accessories. We stand behind our products with 6-months guarantee, ensuring you can shop with confidence. Our mission is to make the latest electronic devices easily accessible to everyone</p>
+                                destination for high quality electronic accessories. We stand behind our products with
+                                6-months guarantee, ensuring you can shop with confidence. Our mission is to make the
+                                latest electronic devices easily accessible to everyone</p>
                         </div>
                         <div class="col-12 col-lg-2 col-md-2 fs-md-5 footer-container">
                             <h3 class=" text-capitalize  footer-header">Menu</h3>
@@ -145,7 +143,7 @@
                                     Niger</li>
                                 <li class="footer-list">State: Niger State</li>
                                 <li class="footer-list">Email: amyogechi@gmail.com</li>
-                                <li class="footer-list">Phone: 234-812-099-1981</li>
+                                <li class="footer-list">Phone: +234-812-099-1981</li>
 
                             </ul>
                         </div>
