--- a/each-products/Oppo Reno 13 Pro.html
+++ b/each-products/Oppo Reno 13 Pro.html
@@ -107,7 +107,6 @@
                                         href="/sign-up.html">Cart</a></button><br>
                                 <button id="button" class="btn btn-sm btn-light">Quantity</button>
                                 <button id="button1" class="btn btn-sm btn-light">Add</button>
-                                <button id="button2" class="btn btn-sm btn-light">+1</button>
                                 <button id="button3" class="btn btn-sm btn-light">Reset Cart</button>
                             </div>
                         </div>
@@ -147,7 +146,7 @@
                                     Niger</li>
                                 <li class="footer-list">State: Niger State</li>
                                 <li class="footer-list">Email: amyogechi@gmail.com</li>
-                                <li class="footer-list">Phone: 234-812-099-1981</li>
+                                <li class="footer-list">Phone: +234-812-099-1981</li>
 
                             </ul>
                         </div>
