--- a/index.html
+++ b/index.html
@@ -491,8 +491,8 @@
                         </div>
                         <div class="mt-2 mx-lg-5 ">
                             <i class="fa-solid fa-heart nav-icons p-2"></i>
-                            <i class="fa-solid fa-cart-shopping nav-icons p-2"></i>
-                            <i class="fa-solid fa-user nav-icons p-2" id="user"> </i>
+                            <a href="login.html"><i class="fa-solid fa-cart-shopping nav-icons p-2"></i></a>
+                            <i class="fa-solid fa-user nav-icons p-2" id="user"></i>
                             <div class="link" id="login">
                                 <ul class="breadcrumb">
                                     <li class="breadcrumb-item"><a href="login.html" class="login-link">Login</a></li>
@@ -519,7 +519,7 @@
                     <div class="row gy-4 mx-sm-3">
                         <div class="col-lg-6 col-xl-3 col-md-6 col-sm-12">
                             <a href="each-products/bluetooth2.html"> <img src="/images/bluetooth.jpg"
-                                    class="w-100 img-items" alt=""></a>
+                                    class="w-100 img-items" alt="portable bluetooth speaker"></a>
                             <div class="img-text">
                                 <h5>portable bluetooth speaker</h5>
                                 <span>$85</span>
@@ -527,16 +527,16 @@
                         </div>
                         <div class="col-lg-6 col-xl-3 col-md-6 col-sm-12">
                             <a href="/each-products/camera1.html"> <img src="/images/cam1,1.webp"
-                                    class="w-100 img-items" alt=""></a>
+                                    class="w-100 img-items" alt="portable Digital Instant Print Camera"></a>
                             <div class="img-text">
                                 <h5>portable Digital Instant Print Camera</h5>
-                                <span>$99.99</span>
+                                <span>$99</span>
                             </div>
                         </div>
 
                         <div class="col-lg-6 col-xl-3 col-md-6 col-sm-12">
-                            <a href="each-products/earbud1.html"> <img src="/images/pod3,1.webp" class="w-100 img-items"
-                                    alt=""></a>
+                            <a href="each-products/Apple AirPods.html"> <img src="/images/pod3,1.webp" class="w-100 img-items"
+                                    alt="wireless earbud headphones"></a>
                             <div class="img-text">
                                 <h5>wireless earbud headphones</h5>
                                 <span>$17.93</span>
@@ -544,7 +544,7 @@
                         </div>
                         <div class="col-lg-6 col-xl-3 col-md-6 col-sm-12">
                             <a href="/each-products/mouse1.html"><img src="images/mouse2,1.webp" class="w-100 img-items"
-                                    alt=""></a>
+                                    alt=" small portable mouse"></a>
                             <div class="img-text">
                                 <h5> small portable mouse</h5>
                                 <span>$11.97</span>
@@ -557,21 +557,21 @@
 
                     <div class="row">
                         <div class="col-lg-6 col-md-6">
-                            <img src="image/redmi.jpg" class="w-100 phone-img" alt="">
+                            <img src="image/redmi.jpg" class="w-100 phone-img" alt="Mobile Phone">
                             <div class="img-text">
                                 <h5>Quality Mobile Phones</h5>
                                 <span>Avaliable in different types</span>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6">
-                            <img src="image/oppo.jpg" class="w-100 phone-img" alt="">
+                            <img src="image/oppo.jpg" class="w-100 phone-img" alt="Mobile Phone">
                         </div>
                     </div>
                     <hr class="text-light mx-3">
                 </div>
             </section>
             <section>
-                <img src="images/laptop-3.jpg" class="w-100 laptop-background" alt="">
+                <img src="images/laptop-3.jpg" class="w-100 laptop-background" alt="laptop">
                 <div class="laptop-img-content">
                     <h3>Laptops avaliable at afforable prizes</h3>
                     <span><a href="Computers.html" class="shop text-light">[Shop Now]</a></span>
