--- a/Accessories.html
+++ b/Accessories.html
@@ -315,10 +315,10 @@
 </head>
 
 <body>
-    <div class="background">
+    <div class="background" id="top">
         <nav class="navbar navbar-expand-md sticky-top">
             <div class="container-xxl">
-                <a href="index.html" id="top" class="nav-brand nav-logo">
+                <a href="index.html"  class="nav-brand nav-logo">
                     <span class="text-light"><span style="color:orange;">Amy</span>Accessory</span>
                 </a>
 
@@ -362,8 +362,7 @@
                         <div class="link" id="login">
                             <ul class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="login.html" class="login-link">Login</a></li>
-                                <li class="breadcrumb-item text-light"> <a href="sign-up.html" class="login-link">Sign
-                                        In</a>
+                                <li class="breadcrumb-item text-light"> <a href="sign-up.html" class="login-link">Sign In</a>
                                 </li>
                             </ul>
                         </div>
@@ -392,98 +391,98 @@
                                 <div class="row">
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
-                                            <a href="/each-products/charger1.html"> <img src="image/pad.jpg"
-                                                    class="img-item" alt=""></a>
-                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                            <a href="/each-products/PS4.html"> <img src="image/pad.jpg"
+                                                    class="img-item" alt="PS4 DualShock 4 Wireless Controller"></a>
+                                            <h2 class="text-light">PS4 DualShock 4 Wireless Controller</h2>
+                                            <span><span>-$114</span></span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
                                             <a href="/each-products/headphone.html"> <img src="image/headphone.jpg"
-                                                    class="img-item" alt=""></a>
-                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                                    class="img-item" alt="wireless Bluetooth over-ear headphones"></a>
+                                            <h2 class="text-light">wireless Bluetooth over-ear headphones</h2>
+                                            <span><span>$130</span></span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
-                                            <a href="/each-products/earbud1.html"> <img src="images/pod3,1.webp"
-                                                    class="img-item" alt=""></a>
-                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                            <a href="/each-products/Apple AirPods.html"> <img src="images/pod3,1.webp"
+                                                    class="img-item" alt="Apple AirPods"></a>
+                                            <h2 class="text-light">Apple AirPods</h2>
+                                            <span><span>$150</span></span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
                                             <a href="/each-products/mouse1.html"> <img src="images/mouse2,1.webp"
-                                                    class="img-item" alt=""></a>
-                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                                    class="img-item" alt="Wireless Mouse"></a>
+                                            <h2 class="text-light">Wireless Mouse</h2>
+                                            <span><span>$50</span></span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
                                             <a href="/each-products/charger2.html"><img src="image/accessories (3).jpg"
-                                                    class="img-item" alt=""></a>
-                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                                    class="img-item" alt="Wireless iphone Charger"></a>
+                                            <h2 class="text-light">Wireless iphone Charger</h2>
+                                            <span><span>$45</span></span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
-                                            <a href="/each-products/keybroad.html"> <img src="image/jambx.jpg"
-                                                    class="img-item" alt=""></a>
-                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                            <a href="/each-products/Amazon Echo Dot.html"> <img src="image/jambx.jpg"
+                                                    class="img-item" alt="Amazon Echo Dot"></a>
+                                            <h2 class="text-light">Amazon Echo Dot</h2>
+                                            <span><span$108</span></span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
                                             <a href="/each-products/mouse2.html"> <img src="image/black mouse.jpg"
-                                                    class="img-item" alt=""></a>
-                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                                    class="img-item" alt="USB Wired Computer Mouse Mice"></a>
+                                            <h2 class="text-light">USB Wired Computer Mouse Mice</h2>
+                                            <span><span>$13</span></span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
                                             <a href="/each-products/camera1.html"> <img src="images/cam1,1.webp"
-                                                    class="img-item" alt=""></a>
-                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                                    class="img-item" alt="Instant Print Digital Camera"></a>
+                                            <h2 class="text-light">Digital Instant Print Camera</h2>
+                                            <span><span>$99</span></span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
                                             <a href="/each-products/batterybank1.html"> <img
-                                                    src="image/apple batterypack.jpg" class="img-item" alt=""></a>
-                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                                    src="image/apple batterypack.jpg" class="img-item" alt="Apple MagSafe Battery Pack"></a>
+                                            <h2 class="text-light">Apple MagSafe Battery Pack</h2>
+                                            <span><span>$75</span></span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
                                             <a href="/each-products/batterybank2.html"> <img
-                                                    src="image/charger (3).jpeg" class="img-item" alt=""></a>
-                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                                    src="image/charger (3).jpeg" class="img-item" alt="Hoco CW26 Wireless Charger"></a>
+                                            <h2 class="text-light">Hoco CW26 Wireless Charger</h2>
+                                            <span><span>$67</span></span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
                                             <a href="/each-products/batterybank3.html"> <img
                                                     src="image/vrurc 10000mAh bank.jpg" class="img-item" alt=""></a>
-                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                            <h2 class="text-light">Veger VG-W1116 Power Bank</h2>
+                                                <span>₦30,000</span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
                                             <a href="/each-products/bluetooth2.html"> <img src="images/bluetooth.jpg"
                                                     class="img-item" alt=""></a>
-                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                            <h2 class="text-light">Portable Bluetooth Speaker</h2>
+                                            <span>₦72,000</span>
                                         </div>
                                     </div>
                                 </div>
@@ -511,8 +510,6 @@
                                 <li class="footer-list"><a href="Computers.html" class="footer-link">Computers</a></li>
                                 <li class="footer-list"><a href="#top" class="footer-link">Accessories</a>
                                 </li>
-                                <li class="footer-list"><a href="Appliances.html" class="footer-link">Appliances</a>
-                                </li>
                                 <li class="footer-list"><a href="contact.html" class="footer-link">Contact</a></li>
                             </ul>
                         </div>
@@ -523,7 +520,7 @@
                                     Niger</li>
                                 <li class="footer-list">State: Niger State</li>
                                 <li class="footer-list">Email: amyogechi@gmail.com</li>
-                                <li class="footer-list">Phone: 234-812-099-1981</li>
+                                <li class="footer-list">Phone: +234-812-099-1981</li>
 
                             </ul>
                         </div>
