--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,7 @@
 
         nav {
             margin-bottom: 80px;
+            background-image: linear-gradient(to left, hsla(240, 100%, 50%, 0.811), hsla(240, 88%, 22%, 0.811), hsla(0, 0%, 0%, 0.837));
         }
 
         .nav-logo {
@@ -300,10 +301,10 @@
 </head>
 
 <body>
-    <div class="container-fliud background">
+    <div class="container-fliud background" id="top">
         <nav class="navbar navbar-expand-md sticky-top">
             <div class="container-xxl">
-                <a href="index.html" id="top" class="nav-brand nav-logo">
+                <a href="index.html" class="nav-brand nav-logo">
                     <span class="text-light"><span style="color:orange;">Amy</span>Accessory</span>
                 </a>
 
@@ -405,7 +406,9 @@
                         <div class="col-12 col-lg-5 col-md-5 footer-container">
                             <h3 class=" text-capitalize  footer-header">Amy Electronics Accessories</h3>
                             <p class="footer-paraghap-list footer-list2">Welcome to Amy Accessories, your trusted
-                                destination for high quality electronic accessories. We stand behind our products with 6-months guarantee, ensuring you can shop with confidence. Our mission is to make the latest electronic devices easily accessible to everyone</p>
+                                destination for high quality electronic accessories. We stand behind our products with
+                                6-months guarantee, ensuring you can shop with confidence. Our mission is to make the
+                                latest electronic devices easily accessible to everyone</p>
                         </div>
                         <div class="col-12 col-lg-2 col-md-2 fs-md-5 footer-container">
                             <h3 class=" text-capitalize  footer-header">Menu</h3>
@@ -416,15 +419,14 @@
                                 <li class="footer-list"><a href="Computers.html" class="footer-link">Computers</a></li>
                                 <li class="footer-list"><a href="Accessories.html" class="footer-link">Accessories</a>
                                 </li>
-                                <li class="footer-list"><a href="Appliances.html" class="footer-link">Appliances</a>
-                                </li>
                                 <li class="footer-list"><a href="#top" class="footer-link">Contact</a></li>
                             </ul>
                         </div>
                         <div class="col-12 col-lg-5 col-md-5 footer-container">
                             <h3 class=" text-capitalize  footer-header">INFO</h3>
                             <ul>
-                                <li class="footer-list footer-list2">Address: Kwankwashe Street, opposite IBB market Niger</li>
+                                <li class="footer-list footer-list2">Address: Kwankwashe Street, opposite IBB market
+                                    Niger</li>
                                 <li class="footer-list">State: Niger State</li>
                                 <li class="footer-list">Email: amyogechi@gmail.com</li>
                                 <li class="footer-list">Phone: +234-812-099-1981</li>
@@ -447,14 +449,7 @@
         </footer>
     </div>
 
-    <script>
-        let user = document.getElementById('user');
-        let login = document.getElementById('login');
-
-        user.addEventListener('click', () => {
-            login.classList.toggle('link');
-        })
-    </script>
+    <script src="index.js"></script>
 </body>
 
 </html>
